--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,7 +42,7 @@ jobs:
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           port: ${{ secrets.VPS_PORT }}
           script: |
-            cd /var/www/html/skripsi-fajar
+            cd /var/www/html/pusling
             ssh-agent bash -c 'ssh-add ~/.ssh/cicd; git pull'
             composer install
             php artisan migrate
